# Graphics-Debug-Agent

./: .gitignore  AGENTS.md  Plan.md  README.md  pyproject.toml  roadmap.md  spec.md
.codex/agents/: coding_subagent.toml  review_subagent.toml
docs/: coding-template-prompt.md  project-contract.md  project-plan.md  template-prompt-coding.md
docs/adr/: 0001-langchain-as-adapter.md  0001-phase-first-document-structure.md  0002-langchain-as-adapter.md  0002-sqlite-event-log-checkpoint.md  0003-phase-first-document-structure.md  0003-sqlite-event-log-checkpoint.md  0004-toolbroker-execution-boundary.md  0005-workspace-active-session-ownership.md  0006-frozen-config-snapshot-provider-strategy.md  0007-agentloopadapter-streaming-observation-path.md  0008-lightweight-repl-tui-architecture.md  0009-prompt-skills-frozen-snapshots-active-context.md  0010-modelcontextframe-llm-visible-context-boundary.md  0011-layered-context-compression-continuity.md  0012-runtime-enforced-shell-path-approval-policy.md  0013-runtime-owned-todo-plan-continuity.md  0014-terminal-recovery-checkpoints-durable-conversation.md  0015-normalized-error-taxonomy-narrow-runtime-retry.md  overview.md
docs/phase-0/: architecture.md  implementation-plan.md  operations.md  scope.md  tests.md
docs/phase-0.5/: architecture.md  implementation-plan.md  operations.md  scope.md  tests.md
docs/phase-1/: architecture.md  implementation-plan.md  operations.md  scope.md  tests.md
docs/phase-2/: architecture.md  implementation-plan.md  operations.md  scope.md  tests.md
prompts/: lead.md  plan.md
(+182 files in other folders)
