[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "debug-agent"
version = "0.1.0"
description = "Local long-running debug agent runtime."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3",
    "langchain-anthropic>=0.3",
    "prompt_toolkit>=3.0.0",
    "rich>=13.0.0",
]

[project.scripts]
debug-agent = "debug_agent.cli.main:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
